# aliaz

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  justfile  package-lock.json  package.json
.github/workflows/: deploy-site.yml  deploy-worker.yml  release.yml
.playwright-mcp/: page-2026-05-05T17-54-42-781Z.yml
docs/: security.md
site/: index.html  pages.css
site/assets/: copy-code.js
site/commands/: index.html
site/docs/: index.html
site/install/: index.html
site/sync/: index.html
src/: main.rs
tests/: cli.rs  install.rs
worker/migrations/: 0002_sessions.sql  0003_auth_rate_limits.sql
worker/src/: index.ts
