[package]
name = "aliaz"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bip39 = { version = "2.2", features = ["rand"] }
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
flate2 = "1.1"
hkdf = "0.12"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
shlex = "1.3"
tar = "0.4"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
